@@ -1,5 +1,6 @@
 Changes for 1.1alpha7:
 
+ - hard-linked templates works when deleting an action (Alexei)
  - hard-linked templates works when adding an action (Alexei)
  - added frontends/php/include/hosts.inc.php (Alexei)
  - added frontends/php/include/maps.inc.php (Alexei)
